--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   flutter_bloc: ^8.1.2
+  form_field_validator: ^1.1.0
+  dio: ^5.1.1
 
 dev_dependencies:
   flutter_test:
